kustomize/instances/overlays/platform/gloo-edge/virtualservices/bookinfo-vs.yaml
apiVersion: gateway.solo.io/v1
kind: VirtualService
metadata:
  name: demo
  namespace: gloo-system
spec:
  virtualHost:
    domains:
      - '*'
    routes:
      - matchers:
          - prefix: /
        routeAction:
          single:
            upstream:
              name: bookinfo-v1-productpage-9080
              namespace: gloo-system
